fixed missing z-index calendar
svn path=/xm.theme/trunk/; revision=76401

--- a/xm/theme/browser/stylesheets/main.css
+++ b/xm/theme/browser/stylesheets/main.css
@@ -1,5 +1,10 @@
 /* Stylesheet for the 'eXtremeManagement' Plone theme */
 
+/* LS- adds a z-index to fix the display of jscalender */
+.calendar {
+    z-index: 4;
+}
+
 .headerTitle {
     position: relative;
     bottom: 20px;
